Fix spacing at the bottom

--- a/src/sass/about/index.scss
+++ b/src/sass/about/index.scss
@@ -5,6 +5,8 @@
 .about-page {
   display: flex;
   flex-direction: column;
+  gap: 4em;
+  margin-top: 8dvw;
 }
 
 .about-card-content {
