--- a/src/sass/portfolio_page/intro.scss
+++ b/src/sass/portfolio_page/intro.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5em;
-  margin-top: 10dvw;
+  margin-top: 8dvw;
 
   &-duck {
     @include logo;
