--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -76,7 +76,7 @@ h6, .h6 {
   letter-spacing: 0.875em * 0.0025;
 }
 
-button, .btn {
+button, .btn, %btn {
   font-weight: 500;
   font-size: 0.875em;
   letter-spacing: 0.875em * 0.0125;
